# cicd-skills-demo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  plan.md  pyproject.toml  requirements.txt  spec.md  task.md  zeabur.json
.claude/skills/build-and-release/: SKILL.md
.claude/skills/build-and-release/assets/: build-and-release.node.yml  release.node.yml  release.python.yml
.claude/skills/build-and-release/evals/: evals.json
.claude/skills/build-and-release/scripts/: compare_yaml.sh  list_workflow_runs.sh  switch_to_demo_branch.sh
.claude/skills/dependency-audit/: SKILL.md
.claude/skills/dependency-audit/assets/: dependency-audit.node.yml  dependency-audit.python.yml
.claude/skills/dependency-audit/evals/: evals.json
.claude/skills/lint-and-test/: SKILL.md
.claude/skills/lint-and-test/scripts/: ensure_pr.sh
.claude/skills/security-scan/: SKILL.md
.claude/skills/security-scan/evals/: evals.json
.claude/skills/security-scan/scripts/: ensure_pr.sh  list_workflow_runs.sh
.github/workflows/: build-and-release.yml  dependency-audit.yml  lint-and-test.yml  security-scan.yml
eval/: prompts.jsonl  run_eval.py
eval/results/: eval-20260430-022545.md  eval-20260430-172305.md  eval-20260430-200859.md
prompts/: 01-framing-corrections.md  02-skill-creator-alignment.md  03-sdk-discovery.md  04-lint-and-test-description-v1.md  05-eval-prompt-design.md  06-eval-misses-analysis.md  06-eval-prompt-design.md  07-eval-21-prompt-rerun.md  07-eval-misses-analysis.md  README.md
server/: agent_runner.py  main.py
server/static/: index.html
skills/lint-and-test/: SKILL.md
skills/lint-and-test/assets/: lint-and-test.node.yml
skills/lint-and-test/evals/: evals.json
tests/: test_agent_runner.py  test_main.py
