# Required for `python -m build` to produce sdist + wheel reproducibly. The
# demo service itself is not consumed as a library — this is here so the
# release.yml workflow (which build-and-release Skill produces) has a valid
# PEP 517 backend to call when a v* tag is pushed.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-skills-demo"
version = "0.1.0"
description = "GitHub CI/CD as Claude Skills — demo service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "claude-agent-sdk>=0.0.13",
]

# Only ship the server package in the built distribution. Without this,
# setuptools' auto-discovery would also pick up tests/, eval/, prompts/,
# which are not part of the runtime artifact.
[tool.setuptools]
packages = ["server"]
include-package-data = true

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8",
    "httpx>=0.27",  # required by fastapi.testclient.TestClient
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Without this, tests can't `from server.agent_runner import ...` since the
# project isn't installed (we run uvicorn directly from source in the
# Dockerfile, no `pip install -e .`). Adding the repo root to sys.path is
# the lightest-touch fix.
pythonpath = ["."]
